assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_variant_nested_mismatch.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enum_struct_patterns_errors/enum_struct_variant_nested_mismatch.rs:36:23
   |
36 |                 name: "delete_user",  // This will fail
   |                       ^^^^^^^^^^^^^ got "update_user"
